--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -167,6 +167,11 @@ header {
 	width: 80%;
 }
 
+p {
+	font-size: 17px;
+	line-height: 1.2;
+}
+
 /* nav styles */
 .nav-wrapper {
 	height: 10vh;
@@ -272,6 +277,86 @@ footer div {
 }
 
 /* Serices page styles */
+/* Header styles */
 .services-header-img {
 	width: 100%;
+}
+
+.services-header-section {
+	height: 17vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	border-bottom: 1px solid black;
+}
+
+.services-header-section h1 {
+	font-size: 30px;
+}
+
+/* Content styling */
+.services-content {
+	width: 80%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-content: space-evenly;
+}
+
+/* Card styling */
+.cards-div {
+	height: 95vh;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-content: space-evenly;
+}
+
+.card {
+	height: 26vh;
+	width: 48%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	background: WhiteSmoke;
+	padding: 2%;
+	border: 1px solid black;
+}
+
+.card button {
+	width: 30%;
+	background: white;
+	border: 1px solid black;
+	padding: 2% 0;
+	border-radius: 5px;
+}
+
+/* Facts section styling */
+.facts {
+	border-top: 2px solid black;
+	height: 40vh;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.facts-text {
+	height: 33vh;
+	width: 48%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
+
+.facts-text ul {
+	list-style-type: square;
+	list-style-position: inside;
+	line-height: 2;
+}
+
+/* Footer styling */
+.services-footer-div {
+	height: 10vh;
+	display: flex;
+	align-items: center;
 }
