--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -360,3 +360,64 @@ footer div {
 	display: flex;
 	align-items: center;
 }
+
+@media (max-width: 700px) {
+	html {
+		width: 100vw;
+		height: auto;
+	}
+
+	header {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.nav-wrapper {
+		height: 15vh;
+		flex-wrap: wrap-reverse;
+		justify-content: center;
+	}
+
+	nav {
+		width: 100%;
+		justify-content: space-around;
+	}
+
+	.services-header-section {
+		height: 30vh;
+		width: 95%;
+	}
+
+	.services-content {
+		width: 95%;
+	}
+
+	.cards-div {
+		flex-direction: column;
+		flex-wrap: nowrap;
+		justify-content: space-evenly;
+		height: 275vh;
+	}
+
+	.card {
+		width: 100%;
+		height: 40vh;
+	}
+
+	.facts {
+		flex-direction: column;
+		height: 90vh;
+	}
+
+	.facts-text {
+		width: 95vw;
+		height: 65vh;
+		justify-content: space-evenly;
+	}
+
+	.facts img {
+		width: 100vw;
+	}
+}
